<resources>
    <string name="app_name">Music Mate</string>
    <string name="app_settings">Settings</string>
    <string name="app_about">About Music Mate</string>
    <string name="editor_song_info">Song Information</string>
    <string name="editor_album_info">Album Information</string>
    <string name="editor_label_title">Title</string>
    <string name="editor_label_artist">Artist</string>
    <string name="editor_label_genre">Genre</string>
    <string name="editor_label_group">Grouping</string>
    <string name="editor_label_album">Album</string>
    <string name="editor_label_album_artist">Album artist</string>
    <string name="editor_label_disc">Disc number</string>
    <string name="editor_label_track">Song number</string>
    <string name="editor_label_year">Year</string>
    <string name="editor_label_media_type">Media type</string>
    <string name="editor_label_media_quality">Media quality</string>
    <string name="editor_label_publisher">Publisher</string>
    <string name="editor_hint_track">Track No.</string>
    <string name="editor_hint_disc">Disc No.</string>
    <string name="alert_template_success">"%1$s is completed successfully."</string>
    <string name="alert_template_inprogress">"%1$s in progress…"</string>
    <string name="alert_template_fail">"%1$s failed."</string>
    <string name="operation_delete">Removing \"%1$s\"</string>
    <string name="operation_write_tag">Saving tags on \"%1$s\"</string>
    <string name="operation_organize">Organizing \"%1$s\"</string>
    <string name="alert_delete_success">\"%1$s\" is removed from storage.</string>
    <string name="alert_delete_inprogress">Removing \"%1$s\"</string>
    <string name="alert_delete_fail">Cannot remove \"%1$s\"</string>
    <string name="alert_delete_inprogress_many">Removing %1$d tracks</string>
    <string name="alert_write_tag_inprogress">Saving tags on \"%1$s\"</string>
    <string name="alert_write_tag_success">\"%1$s\" is saved</string>
    <string name="alert_write_tag_fail">Cannot update \"%1$s\"</string>
    <string name="alert_write_tag_inprogress_many">Saving tags for %1$d songs.</string>
    <string name="alert_organize_success">\"%1$s\" is organized to Music Directory</string>
    <string name="alert_organize_inprogress">Organize \"%1$s\" to Music Directory;</string>
    <string name="alert_organize_fail">Cannot organize \"%1$s\"</string>
    <string name="alert_organize_inprogress_many">Organizing %1$d songs to Music Directory</string>
    <string name="alert_scan_title">Start running media scan…</string>
    <string name="alert_scan_success">Media scan run completed</string>
    <string name="alert_back_to_exit">Press BACK again to exit</string>
    <string name="alert_invalid_media_file">Media file for \"%1$s\" is not valid!</string>
    <string name="alert_btn_cancel">Cancel</string>
    <string name="alert_btn_set">Update</string>
    <string name="title_many">%1$d songs</string>
    <string name="preferences_sub_next_song">Now Playing Song</string>
    <string name="preferences_sub_appearance">Appearance</string>
    <string name="preferences_sub_storage">Storage</string>
    <string name="MetaDataEncoding">Metadata Encoding</string>
    <string name="MetaDataEncodingSummary">Choose the encoding to include in options list on encoding menu</string>
    <string name="symbol_audiophile">\u24B6</string>
    <string name="action_delete">Remove tracks</string>
    <string name="action_select_all">Select All</string>
    <string name="welcome_text">Manage Your Music Files Your Way and Enjoy Listening!</string>
    <string name="changelog_text">2.0.1 - update to androidx</string>
    <string name="app_permission">System Access</string>
    <string name="preferences_sub_others">Others</string>
    <string name="search_view_query_input_hint">Search</string>
    <string name="import_songs_underline"><u>Organize</u></string>
    <string name="edit_tags_underline"><u>Edit Tags</u></string>
    <string name="delete_song_underline"><u>Remove</u></string>
    <string name="aspect_underline"><u>Spectrogram</u></string>
    <string name="websearch_underline"><u>Web Search</u></string>
    <string name="convert_underline"><u>2 Flac</u></string>
    <string name="import_songs_label">Organize</string>
    <string name="measure_dr_label">DR</string>
    <string name="edit_tags_label">TAG</string>
    <string name="delete_song_label">Remove</string>
    <string name="aspect_label">View Spectrum</string>
    <string name="websearch_label">Web Search</string>
    <string name="convert_label">Convert</string>
    <string name="editor_label_collection">Collection</string>
    <string name="preferences_sub_collection">Collections</string>
    <string name="file_explorer_label">Folder</string>
    <string name="app_statistics">Statistics</string>
    <string name="encoding_format">Encoding Format:</string>
    <string name="editor_label_language">Language</string>
    <string name="editor_info">Music information</string>
    <string name="enter_title">Enter title</string>
    <string name="file_path">File Path</string>
    <string name="editor_musicmate_info">Music Mate information</string>
    <string name="sync_to_hiby_label">Sync</string>
    <string name="sample_dr">DR14</string>
    <string name="preferences_sub_streaming">Streaming</string>
    <string name="title_removing_music_files">Remove tracks from Library</string>
    <string name="this_device">this device</string>
    <string name="play">Play</string>
    <string name="stop">Stop</string>
    <string name="pause">Pause</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="addToQueue">Add to Queue</string>
    <string name="exit">Exit</string>
    <string name="playerCurrentItem">currentItem</string>
    <string name="musicActivityNextLabel">"Next: "</string>
    <string name="playerNextItem">nextItem</string>
    <string name="playerPosition">Position</string>
    <string name="playerTiming">Timing: </string>
    <string name="playerTimeDuration">Duration</string>
    <string name="playerTimeSeparator"> / </string>
    <string name="playerTimeElapsed">Elapsed</string>
    <string name="images">Images</string>
    <string name="albums">Albums</string>
    <string name="all">All Songs</string>
    <string name="artists">Artists</string>
    <string name="label_genres">Genres</string>
    <string name="label_groupings">Groupings</string>
    <string name="downloaded">Downloads</string>
    <string name="directory">Sources</string>
    <string name="music">Music</string>
    <string name="playerNameAvTransport">remote</string>
    <string name="playerNameMusic">music</string>
    <string name="playerShortNameMusic">Music</string>
    <string name="activity_remote_player_mute">Mute</string>
    <string name="activity_remote_player_volume">Volume</string>
    <string name="title_activity_server_list">Server</string>
    <string name="title_activity_content_list">Content</string>
    <string name="title_activity_receiver_list">Receiver</string>
    <string name="title_activity_player_list">Player</string>
    <string name="musicActivityImageView">Cover</string>
    <string name="menu_settings">MusicMate Settings</string>
    <string name="about">About</string>
    <string name="channel_name">MusicMate</string>
    <string name="channel_description">MusicMate Notifications</string>
    <string name="media_server_name">MusicMate Music Server</string>
    <string name="style">Style</string>
    <string name="sample_file_type">FLAC</string>
    <string name="file_status_new">New!</string>
    <string name="title_dynamic_range_and_replay_gain">Analyze Dynamic Range</string>
    <string name="title_import_to_music_directory">Organize Music Files</string>
    <string name="title_sync_to_streaming_server">Sync to Streaming Server</string>
    <string name="label_encodings">Encodings</string>
    <string name="label_quality_indicator">Quality</string>
    <string name="label_server">Media Server</string>
    <string name="label_collections">Playlists</string>
    <string name="label_dlna_collections">Playlists</string>
    <string name="label_field">Field</string>
    <string name="label_current">Current</string>
    <string name="label_default_reader">Default Reader</string>
    <string name="label_ffmpeg_reader">FFMpeg Reader</string>
    <string name="about_encoding_file">Convert Files</string>
    <string name="label_resolutions">Resolutions</string>
    <string name="label_codecs">Codecs</string>
    <string name="label_lossy">LOSSY</string>
    <string name="label_Lossless">SQ</string>
    <string name="label_hi_res">HI-RES</string>
    <string name="label_dsd">DSD</string>
    <string name="label_mqa">MQA</string>
    <string name="label_cd">CD</string>
    <string name="label_cd_ext">24-BIT</string>
    <string name="label_audio_encoding_format">Resolutions</string>
    <string name="label_file_format">Format:</string>
    <string name="label_file_resolution">Resolution:</string>
    <string name="label_file_recommended">Best for:</string>
    <string name="encoding_hq_header">Lossy Compressed Audio</string>
    <string name="encoding_hq_desc">Efficient compressed audio that saves space while maintaining good sound quality.</string>
    <string name="encoding_hq_format">MP3, AAC (M4A), OGG</string>
    <string name="encoding_hq_resolution">16-bit • 44.1 kHz (up to 320kbps)</string>
    <string name="encoding_hq_recommended">Casual Listening, Podcasts, Radio</string>
    <string name="encoding_cd_header">CD Quality</string>
    <string name="encoding_cd_desc">Lossless audio identical to the original compact disc.</string>
    <string name="encoding_cd_format">FLAC, ALAC, WAV, AIFF</string>
    <string name="encoding_cd_resolution">16–bit • 44.1–48 kHz</string>
    <string name="encoding_cd_recommended">Pop, Rock, Country, Traditional</string>
    <string name="encoding_cd_ext_header">Studio 24-bit Quality</string>
    <string name="encoding_cd_ext_desc">A step above standard CD, offering greater dynamic headroom.</string>
    <string name="encoding_cd_ext_format">FLAC, ALAC, WAV, AIFF</string>
    <string name="encoding_cd_ext_resolution">24-bit • 44.1–88.2 kHz</string>
    <string name="encoding_cd_ext_recommended">Modern Pop, Electronic, R&amp;B</string>
    <string name="encoding_hires_header">Hi-Res Audio</string>
    <string name="encoding_hires_desc">High-resolution studio master audio with greater detail and dynamic range.</string>
    <string name="encoding_hires_format">FLAC, ALAC, WAV, AIFF</string>
    <string name="encoding_hires_resolution">24-bit • 96–384 kHz</string>
    <string name="encoding_hires_recommended">Classical, Jazz, Acoustic</string>
    <string name="encoding_dsd_header">DSD Audio</string>
    <string name="label_file_quality">File Quality</string>
    <string name="playlist_add_title">Add to Playlist</string>
    <string name="playlist_add_menu">Add to Playlist…</string>
    <string name="ok">OK</string>
    <string name="show_frequency_spectrum">Frequency Spectrum</string>
    <string name="lossless_verifier">Verify Lossless Quality</string>
    <string name="open_containing_folder">Show in File Manager</string>
    <string name="find_online">Search Song on Web</string>
    <string name="label_library_all_songs">All Songs</string>
    <string name="label_library_recently_added">Incoming Tracks</string>
    <string name="label_library_similar_songs">Discover Similar</string>
    <string name="album_art">album art</string>
    <string name="conversion_progress">Conversion Progress</string>
    <string name="play_pause">Play</string>
    <string name="wave_form">Waveform</string>
    <string name="menu_quality">Sound Grade</string>
    <string name="button_delete">Delete</string>
    <string name="search_match_tags">Search &amp; Match Tags</string>
    <string name="menu_smart_clean_format">Smart Clean &amp; Format</string>
</resources>