<?xml version="1.0" encoding="utf-8"?>
<!-- Left Slide Menu (ResideMenu.DIRECTION_LEFT): Library Navigation & Collection Filter -->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Primary Library Views -->
    <group android:id="@+id/group_library_primary">
        <item
            android:id="@+id/menu_library_all_songs"
            android:icon="@drawable/rounded_library_music_24"
            android:title="@string/label_library_all_songs"
            app:showAsAction="ifRoom" />

        <item
            android:id="@+id/menu_tag_artist"
            android:icon="@drawable/rounded_for_you_24"
            android:title="@string/artists"
            app:showAsAction="ifRoom" />

        <item
            android:id="@+id/menu_tag_genre"
            android:icon="@drawable/rounded_style_24"
            android:title="@string/label_genres"
            app:showAsAction="ifRoom" />
    </group>

    <!-- Curate & Collections -->
    <group android:id="@+id/group_library_curate">
        <item
            android:id="@+id/menu_collection"
            android:icon="@drawable/rounded_order_play_24"
            android:title="@string/label_collections"
            app:showAsAction="ifRoom" />
    </group>

    <!-- Discovery & Smart Views -->
    <group android:id="@+id/group_library_discover">
        <item
            android:id="@+id/menu_library_recently_added"
            android:icon="@drawable/rounded_add_diamond_24"
            android:title="@string/label_library_recently_added"
            app:showAsAction="ifRoom" />

        <item
            android:id="@+id/menu_library_similar_songs"
            android:icon="@drawable/rounded_auto_awesome_motion_24"
            android:title="@string/label_library_similar_songs"
            app:showAsAction="ifRoom" />
    </group>

    <!-- Audiophile & Quality Classification -->
    <group android:id="@+id/group_library_technical">
        <item
            android:id="@+id/menu_sound_grade"
            android:icon="@drawable/rounded_equalizer_24"
            android:title="@string/menu_quality"
            app:showAsAction="ifRoom" />
    </group>

</menu>
